--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node dist/server.js",
     "dev": "nodemon src/server.ts",
     "nodemon": "nodemon --exec ts-node src/server.ts",
-    "build": "tsc",
+    "build": "tsc && tsc-alias",
     "watch": "tsc -w",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -53,6 +53,7 @@
     "nodemon": "^3.0.1",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.16",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2"
   },
